# Copenhagen-Airport-Case

./: README.md
resource/: departures_cleaned.json  departures_raw.json
source/: README.md
source/code/: .envexample.txt  README.md  pyproject.toml  test_poetry_script.py
source/code/classes/: db_engine.py
source/code/scripts/: README.md
source/code/scripts/api/: __init__.py  airports_api.py  flights_api.py
source/code/scripts/pipelines/: cph_case_pipeline.py
source/code/scripts/simulations/: flights_tickets.py  passport.py
source/code/scripts/upserts/: __init__.py  upsert_aircraft_models.py  upsert_airports.py  upsert_flights.py  upsert_passport.py  upsert_tickets.py
source/code/utils/: README.md  api_urls.py  db_types.py  env.py  orchestrator.py  path_config.py
source/rapport/: README.md
source/rapport/CPH Airport – Passenger & Flight Insights (Power BI Demo).Report/: report.json
source/rapport/CPH Airport – Passenger & Flight Insights (Power BI Demo).SemanticModel/: diagramLayout.json
source/rapport/CPH Airport – Passenger & Flight Insights (Power BI Demo).SemanticModel/definition/: model.tmdl
